--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,10 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
 ```
 
+## {.tabset}
+
+### Welcome!
+
 Hi there!
 
 I've set this up as an introductory resource for psychology students taking my *Programming with R* class at UNSW. There are two goals with this resource. The first is to provide an introduction to R programming that doesn't assume any previous experience. The second is to provide a brief sketch of some of things that R can be useful for in psychology. Data analysis inevitably forms a large part of this, but I hope to cover a broader range of topics.
@@ -26,8 +30,6 @@ It is of course a work in progress, but I hope it is useful! Please don't hesita
 
 <img src="./img/splash_turtle2.png" width=250px>
 
-
-## Sections {.tabset}
 
 ### 1: Core toolkit
 
@@ -71,6 +73,18 @@ Everything from here onwards is *very much* a work in progress!
 - <span style="color:#cccccc">Authoring documents in R (to be added)</span> <!-- markdown, blogdown, papaja -->
 - <span style="color:#cccccc">Computational modelling (to be added)</span> <!-- Rescorla-Wagner, GCM -->
 
+
+
+### Links
+
+- Week 1 slides: [pptx](./docs/overview.pptx), [pdf](./docs/overview.pdf)
+- Week 2 workbook: [here](./lesson2.html)
+- Data sets are [here](./docs/data.zip)
+- Github repository is [here](https://github.com/djnavarro/psyr)
+
+
+
+
 <!--
 ## Topics I want to add
 
@@ -89,11 +103,4 @@ Everything from here onwards is *very much* a work in progress!
 
 -->
 
-
-### 5. Some links
-
-- Week 1 slides: [pptx](./docs/overview.pptx), [pdf](./docs/overview.pdf)
-- Week 2 workbook: [here](./lesson2.html)
-- Data sets are [here](./docs/data.zip)
-- Github repository is [here](https://github.com/djnavarro/psyr)
 
