--- a/probability.Rmd
+++ b/probability.Rmd
@@ -25,13 +25,13 @@ library(tidyverse,quietly = TRUE)
 
 ## Prelude
 
-R is very often described as a *statistical programming environment*, because - while it does get used for an incredible variety of purposes - it began its life as a tool for helping statisticians analyse data. As such, it has an unrivalled collection of statistical packages built into it, and I'll talk a little about some of them later. However, before starting to talk about statistics, it's very useful to talk about *probability distributions* and how they are usually implemented in R. 
+R is very often described as a *statistical programming environment*, because - while it does get used for an incredible variety of purposes - it began its life as a tool for helping statisticians analyse data. As such, it has an unrivalled collection of statistical packages built into it, and I'll talk a little about some of them later. However, before starting to talk about statistics, it's very useful to talk about *probability distributions* and how they are usually implemented in R.
 
 Speaking of which, what exactly is the difference between probability theory and statistics? The two disciplines are closely related but they’re not identical. Probability theory is “the doctrine of chances”. It’s a branch of mathematics that tells you how often different kinds of events will happen. For example, all of these questions are things you can answer using probability theory:
 
 - What are the chances of a fair coin coming up heads 10 times in a row?
 - If I roll two six sided dice, how likely is it that I’ll roll two sixes?
-- How likely is it that five cards drawn from a perfectly shuffled deck will all be hearts? 
+- How likely is it that five cards drawn from a perfectly shuffled deck will all be hearts?
 - What are the chances that I’ll win the lottery?
 
 Notice that all of these questions have something in common. In each case the “truth of the world” is known, and my question relates to the “what kind of events” will happen. In the first question I *know* that the coin is fair, so there’s a 50% chance that any individual coin flip will come up heads. In the second question, I *know* that the chance of rolling a 6 on a single die is 1 in 6. In the third question I *know* that the deck is shuffled properly. And in the fourth question, I *know* that the lottery follows specific rules. You get the idea. The critical point is that probabilistic questions start with a known **model** of the world, and we use that model to do some calculations. The underlying model can be quite simple. For instance, in the coin flipping example, we can write down the model like this:
@@ -84,17 +84,17 @@ shuffled_stimuli <- stimuli %>% sample()
 shuffled_stimuli
 ```
 
-Notice that the output the second time around *isn't* the same a the output the first time. The `sample()` function uses a pseudo-random number generator to order the items differently every time. 
+Notice that the output the second time around *isn't* the same a the output the first time. The `sample()` function uses a pseudo-random number generator to order the items differently every time.
 
 ```{r}
 for(i in 1:5) {
-  stimuli %>% 
-    sample() %>% 
+  stimuli %>%
+    sample() %>%
     print()
 }
 ```
 
-As you can see if you feed in a vector of inputs, the default behaviour is to shuffle all the items. However, the `sample()` function is flexible. For example, "shuffling all the items" is a special case of "sampling without replacement". Imagine taking all the stimuli (*letters*), and then placing them into a jar. To shuffle them into a random order all you need to do is shake the jar (*randomise*) pull them out of the jar (*sample*) one at a time until the jar is empty (*no replacement*). 
+As you can see if you feed in a vector of inputs, the default behaviour is to shuffle all the items. However, the `sample()` function is flexible. For example, "shuffling all the items" is a special case of "sampling without replacement". Imagine taking all the stimuli (*letters*), and then placing them into a jar. To shuffle them into a random order all you need to do is shake the jar (*randomise*) pull them out of the jar (*sample*) one at a time until the jar is empty (*no replacement*).
 
 The jars metaphor is nice because we can extend it. Suppose we only want to pull 6 of the 10 stimuli out of the jar:
 
@@ -106,8 +106,8 @@ Again, there are no repeats (it is impossible to pull the same item from the jar
 
 ```{r}
 for(i in 1:5) {
-  stimuli %>% 
-    sample(size = 6) %>% 
+  stimuli %>%
+    sample(size = 6) %>%
     print()
 }
 ```
@@ -116,15 +116,15 @@ Another way to extend the jars metaphor is to sample *with replacement*. In this
 
 ```{r}
 for(i in 1:5) {
-  stimuli %>% 
-    sample(size = 15, replace = TRUE) %>% 
+  stimuli %>%
+    sample(size = 15, replace = TRUE) %>%
     print()
 }
 ```
 
 Notice that this time you can produce sequences of stimuli that are longer than the original set (because you're putting them back in the jar). In this case even though I only had 10 items, each output has 15 samples from that set: there are of course repeats!
 
-A final way we can extend the metaphor is to imagine that some of the letters are written on larger pieces of paper than others: so when you reach into the hat you're more likely to pull out the larger ones. 
+A final way we can extend the metaphor is to imagine that some of the letters are written on larger pieces of paper than others: so when you reach into the hat you're more likely to pull out the larger ones.
 
 ```{r}
 weights <- 1:10 # weight the later letters more!
@@ -134,8 +134,8 @@ You can use this when sampling with replacement and without. Here's what it look
 
 ```{r}
 for(i in 1:5) {
-  stimuli %>% 
-    sample(size = 10, replace = FALSE, prob = weights) %>% 
+  stimuli %>%
+    sample(size = 10, replace = FALSE, prob = weights) %>%
     print()
 }
 ```
@@ -147,8 +147,8 @@ We can also do this when sampling with replacement:
 
 ```{r}
 for(i in 1:5) {
-  stimuli %>% 
-    sample(size = 10, replace = TRUE, prob = weights) %>% 
+  stimuli %>%
+    sample(size = 10, replace = TRUE, prob = weights) %>%
     print()
 }
 ```
@@ -173,7 +173,7 @@ n_blue <- sum(rolls == "blue")
 n_blue
 ```
 
-Of coure, there's nothing stopping us from repeating this exercise several times:
+Of course, there's nothing stopping us from repeating this exercise several times:
 
 ```{r}
 for(i in 1:5){
@@ -200,11 +200,11 @@ frequencies
 With this particular `die` the probability of observing a `"blue"` on any one roll is two-thirds (4 out of 6 sides) and not surprisingly the outcomes of this "roll the die 20 times" experiment tend to be *distributed* mostly between 12 and 15. I hate looking at tables of numbers, so let's draw a picture:
 
 ```{r}
-as_tibble(frequencies, n = "count") %>% 
-  mutate(n_blue = as.numeric(n_blue)) %>% 
+as_tibble(frequencies, n = "count") %>%
+  mutate(n_blue = as.numeric(n_blue)) %>%
   ggplot(aes(x=n_blue, y = count)) +
-  geom_col(width = .5) + 
-  theme_bw() 
+  geom_col(width = .5) +
+  theme_bw()
 ```
 
 This picture is essentially a visualisation of the **binomial distribution** with success probability `prob = 2/3`, so it's worth taking a moment to be explicit about what we've done. Every one of our experiments produces an *outcome* (number of blues) that can be described as *one* random draw from the binomial distribution. So the 100000 replications of the experiment can be vieweed as a set of 100000 numbers sampled from the binomial. R contains a function `rbinom()` that we can use to do this directly:
@@ -218,16 +218,16 @@ If we process this set of numbers using the same code, we get an almost identica
 ```{r}
 plot_samples <- function(x, size = 20) {
   x <- factor(x, levels = 0:size)
-  frequencies <- table(x) 
+  frequencies <- table(x)
   proportion <- frequencies / sum(frequencies)
-  pic <- as_tibble(proportion, n = "proportion") %>% 
-    mutate(x = as.numeric(x)) %>% 
+  pic <- as_tibble(proportion, n = "proportion") %>%
+    mutate(x = as.numeric(x)) %>%
     ggplot(aes(x=x, y = proportion)) +
-    geom_col(width = .5) + 
+    geom_col(width = .5) +
     xlab("outcome value") +
     ggtitle(sum(frequencies)) +
     ylim(0,.3) +
-    theme_bw() 
+    theme_bw()
   return(pic)
 }
 ```
@@ -269,7 +269,7 @@ tibble(outcome_value, true_prob) %>%
   theme_bw()
 ```
 
-Cool. 
+Cool.
 
 The animation below shows how the binomial distribution changes as we shift the value of `prob`:
 
@@ -284,9 +284,9 @@ for(prob in prob_list) {
     Probability = dbinom(Value, size = xmax, prob = prob)
   )
   pic <- df %>% ggplot(aes(x = Value, y = Probability)) +
-    geom_col(width=.5) + 
+    geom_col(width=.5) +
     ggtitle(paste0("Success Probability = ", sprintf("%.2f",prob))) +
-    theme_bw() + 
+    theme_bw() +
     ylim(0,.5)
   plot(pic)
 }
@@ -306,9 +306,9 @@ for(xmax in xmax_list) {
     Probability = dbinom(Value, size = xmax, prob = prob)
   )
   pic <- df %>% ggplot(aes(x = Value, y = Probability)) +
-    geom_col(width=.5) + 
+    geom_col(width=.5) +
     ggtitle(paste0("Size = ", xmax)) +
-    theme_bw() + 
+    theme_bw() +
     ylim(0,.7)
   plot(pic)
 }
@@ -316,9 +316,16 @@ for(xmax in xmax_list) {
 
 You can see the central limit theorem in action here! As the `size` gets larger, the shape of the binomial distribution gets progressively closer to normal. Speaking of which...
 
-## Normal distribution 
+## Normal distribution
 
-The normal distribution is the perhaps the most widely used distribution in statistics, so I should talk about it in some detail. 
+The normal distribution is the perhaps the most widely used distribution in statistics, so I should talk about it in some detail. It's also a good moment to talk about how the tools for working with probability distributions in R are structured. As a rule, any distribution that you want to work with in R will be associated with four separate functions. If I want to work with a normal distribution, for instance, there are four different functions - `rnorm`, `dnorm`, `pnorm` and `qnorm`. If I want to work with a uniform distribution, the functions are named `runif`, `dunif`, `punif` and `qunif`. For a binomial distribution, they are `rbinom`, `dbinom`, `pbinom` and `qbinom`. The four versions are:
+
+- The **r form** is a random number generator: you can use it to sample `n` random outcomes from the distribution.
+- The **d form** computes the probability (or probability density) with which you would observe a particular number `x` if it is generated from this distribution.
+- The **p form** is the cumulative distribution function. You specify a particular value `q`, and it tells you the probability of obtaining an outcome smaller than or equal to `q`.
+- The **q form** calculates the quantiles of the distribution. You specify a probability value `p`, and gives you the corresponding percentile. That is, the value of the variable for which there’s a probability `p` of obtaining an outcome lower than `q`.
+
+
 
 
 ```{r normal_mean, fig.show='animate', interval=0.05, cache=TRUE, message=FALSE, echo=FALSE}
@@ -361,20 +368,11 @@ for(sigma in sigma_list) {
 ```
 
 
-### The "rdpq" functions
-
-The tools for working with probability distributions in R tend to be fairly standardised. If I want to work with a normal distribution, for instance, there are four different functions - `rnorm`, `dnorm`, `pnorm` and `qnorm`. If I want to work with a uniform distribution, the functions are named `runif`, `dunif`, `punif` and `qunif`. For a binomial distribution, they are `rbinom`, `dbinom`, `pbinom` and `qbinom`. The four versions are:
-
-
-- The **r form** is a random number generator: you can use it to sample `n` random outcomes from the distribution.
-- The **d form** computes the probability (or probability density) with which you would observe a particular number `x` if it is generated from this distribution. 
-- The **p form** is the cumulative distribution function. You specify a particular value `q`, and it tells you the probability of obtaining an outcome smaller than or equal to `q`.
-- The **q form** calculates the quantiles of the distribution. You specify a probability value `p`, and gives you the corresponding percentile. That is, the value of the variable for which there’s a probability `p` of obtaining an outcome lower than `q`.
 
 
 
 
-For example, IQ scores are roughly normally distributed, and the tests are 
+For example, IQ scores are roughly normally distributed, and the tests are
 (supposedly) normed in such a way that the average IQ score is 100 and the standard deviation is 15. So let's use R to randomly generate a sample of `n = 50` IQ scores using the `rnorm` function.
 ```{r}
 iq <- rnorm(n = 50, mean = 100, sd = 15)  # sample the IQ scores
@@ -426,7 +424,3 @@ Not yet written!
 ### Chi-square distribution
 
 ### F distribution
-
-
-
-
