--- a/experiments.Rmd
+++ b/experiments.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Behavioural experiments"
+title: "23. Behavioural experiments"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 0
+      "--number-offset", 23
     ]
 ---
 
