--- a/import-export.Rmd
+++ b/import-export.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "22. Advanced statistics"
+title: "18. Import and export"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 22
+      "--number-offset", 18
     ]
 ---
 
