--- a/intermediate-statistics.Rmd
+++ b/intermediate-statistics.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Intermediate Statistics"
+title: "21. Intermediate statistics"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 0
+      "--number-offset", 21
     ]
 ---
 
