--- a/introductory-statistics.Rmd
+++ b/introductory-statistics.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introductory Statistics"
+title: "20. Introductory statistics"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 0
+      "--number-offset", 20
     ]
 ---
 
@@ -19,6 +19,7 @@ output:
 rm(list=objects()) # start with a clean workspace
 source("knitr_tweaks.R")
 library(tidyverse,quietly = TRUE)
+library(lsr)
 library(car)
 ```
 
