--- a/probability.Rmd
+++ b/probability.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Probability Distributions"
+title: "19. Probability distributions"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 0
+      "--number-offset", 19
     ]
 ---
 
