--- a/web-scraping.Rmd
+++ b/web-scraping.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Web Scraping"
+title: "25. Web scraping"
 output:
   html_document:
     includes:
@@ -11,7 +11,7 @@ output:
     css: mystyle.css
     number_sections: true
     pandoc_args: [
-      "--number-offset", 0
+      "--number-offset", 25
     ]
 ---
 
